--- a/src/workshop.ipynb
+++ b/src/workshop.ipynb
@@ -482,6 +482,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['>Rosalind_5959']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "x = \">Rosalind_5959\"\n",
+    "\n",
+    "pattern = r'\\[a-z][A-Z]{8}[_0-9]{4}'\n",
+    "\n",
+    "x2 = re.split(pattern, x)\n",
+    "print(x2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
