--- a/tests/gen.ipynb
+++ b/tests/gen.ipynb
@@ -17,20 +17,20 @@
     "\n",
     "- Prey\n",
     "I need to create an attribute list for prey.\n",
-    "What every \"fitness parameters\" does in practis.\n",
-    "Ex: if you have lets say 52 as speed attribute/rating. \n",
-    "And I create a rule that says if you have over 50 in speed...\n",
+    "What every \"FITNESS parameters\" does in practis.\n",
+    "Ex: if you have lets say 52 as SPEED attribute/rating. \n",
+    "And I create a rule that says if you have over 50 in SPEED...\n",
     "increase the chance of escape by 15%. \n",
     "\n",
     "I need to define this beforehand so i more easily modify the fitenss/mutation functions.\n",
     "\n",
-    "Gen 0: Health (How much health tbey have.)\n",
+    "Gen 0: HEALTH (How much HEALTH tbey have.)\n",
     "\n",
-    "Gen 1: Weight (How much damage they take)\n",
+    "Gen 1: WEIGHT (How much damage they take)\n",
     "\n",
-    "Gen 2: attack power (This will always be 0)\n",
+    "Gen 2: ATTACK power (This will always be 0)\n",
     "\n",
-    "Gen 3: Speed (How good they are at evading prey.)\n",
+    "Gen 3: SPEED (How good they are at evading prey.)\n",
     "\n",
     "Days Survied: How many iterations the prey has survived.\n",
     "\n",
@@ -46,56 +46,56 @@
     "    def __init__(self, x: int, y: int):\n",
     "        self.x: int = x\n",
     "        self.y: int = y\n",
-    "        self.fitness: int = 0\n",
+    "        self.FITNESS: int = 0\n",
     "        self.days_survived: int = 0\n",
     "        self.enemy_close: int = 0\n",
-    "        self.genes = []\n",
+    "        self.GENES = []\n",
     "        self.NUM_GENES = NUM_GENESö\n",
-    "        self.pos: List[int] = [x, y]\n",
+    "        self.POS: List[int] = [x, y]\n",
     "        \n",
     "    \n",
-    "    def set_pos():\n",
-    "        self.pos: List[int] = [x, y]\n",
+    "    def set_POS():\n",
+    "        self.POS: List[int] = [x, y]\n",
     "        \n",
     "    \n",
-    "    def calc_fitness(self, gen_array: List[int], days_survived: int) -> int:\n",
+    "    def calc_FITNESS(self, gen_array: List[int], days_survived: int) -> int:\n",
     "        self.days_survived = days_survived\n",
-    "        self.genes = gen_array\n",
-    "        self.fitness = (self.days_survived / 0,45) * (self.genes[0] / 0.09) * (self.enemy_close / 0.02)\n",
-    "        return self.fitness\n",
+    "        self.GENES = gen_array\n",
+    "        self.FITNESS = (self.days_survived / 0,45) * (self.GENES[0] / 0.09) * (self.enemy_close / 0.02)\n",
+    "        return self.FITNESS\n",
     "    \n",
     "    # This needs total rework.\n",
-    "    def mutation(self, xx_genes: List[int], xy_genes: List[int]):        \n",
+    "    def mutation(self, xx_GENES: List[int], xy_GENES: List[int]):        \n",
     "        # Children\n",
     "        child01 = []\n",
     "        child02 = []\n",
     "        \n",
     "        # Single Point Crossover every parent is in pair and will produce 2 childern.\n",
-    "        gen_len = len(xx_genes)\n",
+    "        gen_len = len(xx_GENES)\n",
     "        crossover_point = random.randint(0, gen_len)\n",
     "        \n",
     "        for i in range(gen_len):     \n",
     "            # Cross-over-point - \n",
     "            if i >= crossover_point:\n",
     "                # Picks the best one.\n",
-    "                if xx_genes[i] > xy_genes[i]:\n",
-    "                    child01[i] = xx_genes[i]\n",
-    "                    child02[i] = xy_genes[i]\n",
+    "                if xx_GENES[i] > xy_GENES[i]:\n",
+    "                    child01[i] = xx_GENES[i]\n",
+    "                    child02[i] = xy_GENES[i]\n",
     "                else:\n",
-    "                    child01[i] = xy_genes[i]\n",
-    "                    child02[i] = xy_genes[i]\n",
+    "                    child01[i] = xy_GENES[i]\n",
+    "                    child02[i] = xy_GENES[i]\n",
     "            else:\n",
     "                chlild01[i] = np.random.sample()\n",
     "                child02[i] = np.random.sample()\n",
     "            \n",
     "            \n",
-    "    def set_random_genes(self):\n",
-    "        self.genes = []\n",
+    "    def set_random_GENES(self):\n",
+    "        self.GENES = []\n",
     "        for i in range(0, self.NUM_GENES):\n",
-    "            self.genes[i] = np.random.sample()\n",
+    "            self.GENES[i] = np.random.sample()\n",
     "    \n",
-    "    def move(self, health_left: int) -> bool:\n",
-    "        if health_left > 0:\n",
+    "    def move(self, HEALTH_left: int) -> bool:\n",
+    "        if HEALTH_left > 0:\n",
     "            # Main code (Calculates how to move.)\n",
     "            \n",
     "            return True\n",
@@ -116,13 +116,13 @@
     "    def __init__(self, x: int, y: int):\n",
     "        self.x: int = x\n",
     "        self.y: int = y\n",
-    "        self.fitness: int = 0\n",
-    "        self.genes = Genes(0, 0, 0, 0)\n",
+    "        self.FITNESS: int = 0\n",
+    "        self.GENES = GENES(0, 0, 0, 0)\n",
     "        self.kills: int = 0\n",
-    "        self.pos: List[int] = [x, y]\n",
+    "        self.POS: List[int] = [x, y]\n",
     "    \n",
-    "    def set_pos():\n",
-    "        self.pos: List[int] = [x, y]\n",
+    "    def set_POS():\n",
+    "        self.POS: List[int] = [x, y]\n",
     "    \n",
     "    def upgrade(self):\n",
     "        pass\n",
@@ -135,13 +135,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Genes:\n",
+    "class GENES:\n",
     "    \n",
-    "    def __init__(self, health: int, weight: int, attack: int, speed: int):\n",
-    "        self.health: int = health\n",
-    "        self.weight: int = weight\n",
-    "        self.attack: int = attack\n",
-    "        self.speed: int = speed"
+    "    def __init__(self, HEALTH: int, WEIGHT: int, ATTACK: int, SPEED: int):\n",
+    "        self.HEALTH: int = HEALTH\n",
+    "        self.WEIGHT: int = WEIGHT\n",
+    "        self.ATTACK: int = ATTACK\n",
+    "        self.SPEED: int = SPEED"
    ]
   },
   {
@@ -150,10 +150,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pos_taken(xy, pos_list):\n",
+    "def POS_taken(xy, POS_list):\n",
     "    done = True\n",
     "    while notdone:\n",
-    "        if xy in pos_list:\n",
+    "        if xy in POS_list:\n",
     "            xy = [random.randint(0, 100), random.randint(0, 100)]\n",
     "        else: \n",
     "            notdone = False\n",
@@ -172,16 +172,16 @@
     "    game = [[\"\" for i in range(0, 100)] for i in range(0, 100)]\n",
     "    hunters_666 = []\n",
     "    prey_404 = []\n",
-    "    taken_pos = []\n",
+    "    taken_POS = []\n",
     "    # Creates the players in the gameboard.\n",
     "    for i in range(0, num_prey):\n",
     "        if i < num_hunter:\n",
     "            # Creation of Hunters\n",
     "            hunters_666.append(Hunter(999, 999))\n",
-    "            # Let check if this position is already taken.\n",
+    "            # Let check if this POSition is already taken.\n",
     "            x = random.randint(0, 100)\n",
     "            y = random.randint(0, 100)\n",
-    "            x, y = pos_taken([x, y], pos_taken) \n",
+    "            x, y = POS_taken([x, y], POS_taken) \n",
     "            hunters_666[i].x = x\n",
     "            hunters_666[i].y = y\n",
     "            game[x][y] = 666\n",
@@ -189,7 +189,7 @@
     "        prey_404.append(Prey(999, 999))\n",
     "        x = random.randint(0, 100)\n",
     "        y = random.randint(0, 100)\n",
-    "        x, y = pos_taken([x, y], pos_taken) \n",
+    "        x, y = POS_taken([x, y], POS_taken) \n",
     "        prey_404[i].x = x\n",
     "        prey_404[i].y = y\n",
     "        game_404[x][y] = 404\n",
@@ -233,8 +233,8 @@
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10856/2387289928.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10856/2387289928.py\u001b[0m in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;31m# Like this\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m     \u001b[0mhunter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_game\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mNUM_HUNTERS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mNUM_PREY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;31m# This is where the simulation starts.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10856/310509962.py\u001b[0m in \u001b[0;36mcreate_game\u001b[1;34m(num_hunter, num_prey)\u001b[0m\n\u001b[0;32m     14\u001b[0m             \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m             \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpos_taken\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpos_taken\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m             \u001b[0mhunters_666\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m             \u001b[0mhunters_666\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10856/985437270.py\u001b[0m in \u001b[0;36mpos_taken\u001b[1;34m(xy, pos_list)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mpos_taken\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpos_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mxy\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpos_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m         \u001b[0mpos_taken\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpos_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mreturn\u001b[0m \u001b[0mxy\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxy\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10856/310509962.py\u001b[0m in \u001b[0;36mcreate_game\u001b[1;34m(num_hunter, num_prey)\u001b[0m\n\u001b[0;32m     14\u001b[0m             \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m             \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPOS_taken\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPOS_taken\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m             \u001b[0mhunters_666\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m             \u001b[0mhunters_666\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10856/985437270.py\u001b[0m in \u001b[0;36mPOS_taken\u001b[1;34m(xy, POS_list)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mPOS_taken\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPOS_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mxy\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mPOS_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m         \u001b[0mPOS_taken\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPOS_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mreturn\u001b[0m \u001b[0mxy\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxy\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m: argument of type 'function' is not iterable"
      ]
     }
@@ -246,8 +246,8 @@
     "    # 100x100 2D array. Gameboard print(len(game[0])) -- print(len(game))\n",
     "    \n",
     "    # OLD CODE.\n",
-    "    # hunter_pos = [[random.randint(0, 100), random.randint(0, 100)] for i in range(0, NUM_HUNTERS)]\n",
-    "    # prey_pos = [[random.randint(0, 100), random.randint(0, 100)] for i in range(0, NUM_PREY)]\n",
+    "    # hunter_POS = [[random.randint(0, 100), random.randint(0, 100)] for i in range(0, NUM_HUNTERS)]\n",
+    "    # prey_POS = [[random.randint(0, 100), random.randint(0, 100)] for i in range(0, NUM_PREY)]\n",
     "    \n",
     "    # OLD CODE.\n",
     "    # hunter = [Hunter(999, 999) for i in range(0, NUM_HUNTERS)]\n",
@@ -262,11 +262,11 @@
     "    count = 0\n",
     "    for i in range(0, NUM_ITERATIONS): # O(2^n)\n",
     "        for i in hunter:\n",
-    "            # Gets current pos.\n",
-    "            i.setpos()\n",
-    "            hunter_pos = i.pos\n",
+    "            # Gets current POS.\n",
+    "            i.setPOS()\n",
+    "            hunter_POS = i.POS\n",
     "            # Check surroundings\n",
-    "            check_sur(hunter_pos[0], hunter_pos[1], hunter)\n",
+    "            check_sur(hunter_POS[0], hunter_POS[1], hunter)\n",
     "            \n",
     "            \n",
     "            \n",
@@ -291,8 +291,8 @@
    ],
    "source": [
     "def x():\n",
-    "    x = Genes(1, 2, 3, 4)\n",
-    "    print(x.attack)\n",
+    "    x = GENES(1, 2, 3, 4)\n",
+    "    print(x.ATTACK)\n",
     "    \n",
     "x()"
    ]
